@@ -1421,10 +1421,6 @@
                 <property name="Russians bid" value="0" editable="true">
                         <number min="0" max="1000"/>
                 </property>
-
-		<property name="Heavy Bombers Pick best of X Dice" value="false" editable="true">
-			<boolean/>
-		</property>
 		
                 <property name="Heavy Bomber Dice Rolls" value="3" editable="false">
                         <number min="2" max="3"/>
